# proc-macro-playground

./: Cargo.toml
clone-getters-macro/: Cargo.toml
clone-getters-macro/src/: getters.rs  lib.rs
playground-core-lib/: Cargo.toml
playground-core-lib/src/: lib.rs
tests/: test_clone_getters.rs
