[package]
name = "proc-macro-playground"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "proc_macro_playground"
path = "src/lib.rs"

[dependencies]
clone-getters-macro = { path = "clone-getters-macro" }
playground-core-lib = { path = "playground-core-lib" }
