[package]
name = "clone-getters-macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "clone_getters_macro"
path = "src/lib.rs"
proc-macro = true

[dependencies]
playground-core-lib = { path = "../playground-core-lib" }
proc-macro2 = "*"
quote = "*"
syn = { version = "*", features = ["full"] }
